--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <h1 class="value">До здачі домашок залишилось...</h1>
   <div class="timer" id="timer-1">
     <div class="field">
       <span class="value" data-value="days">11</span>
